20220126 - Found greatest tumor volume for each unique mouse
- Found the greatest tumor volume of each unique mouse based on timepoint.

--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
        "array(['g989'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "1592  Female          21          26  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1325,7 @@
        "Zoniferol                   6.966589                0.516398  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1673,7 @@
        "Zoniferol     53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2106,34 +2106,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mouse ID</th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "      <th>Metastatic Sites</th>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age_months</th>\n",
+       "      <th>Weight (g)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a203</td>\n",
+       "      <td>45</td>\n",
+       "      <td>67.973419</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>20</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a251</td>\n",
+       "      <td>45</td>\n",
+       "      <td>65.525743</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>a262</td>\n",
+       "      <td>45</td>\n",
+       "      <td>70.717621</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Placebo</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>17</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>a275</td>\n",
+       "      <td>45</td>\n",
+       "      <td>62.999356</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Ceftamin</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>20</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>a366</td>\n",
+       "      <td>30</td>\n",
+       "      <td>63.440686</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Stelasyn</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>16</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244</th>\n",
+       "      <td>z435</td>\n",
+       "      <td>10</td>\n",
+       "      <td>48.710661</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>12</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>245</th>\n",
+       "      <td>z578</td>\n",
+       "      <td>45</td>\n",
+       "      <td>30.638696</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>246</th>\n",
+       "      <td>z581</td>\n",
+       "      <td>45</td>\n",
+       "      <td>62.754451</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>24</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>z795</td>\n",
+       "      <td>45</td>\n",
+       "      <td>65.741070</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Naftisol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>13</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248</th>\n",
+       "      <td>z969</td>\n",
+       "      <td>45</td>\n",
+       "      <td>73.867845</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Naftisol</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>249 rows × 8 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Drug Regimen\n",
-       "Capomulin    y793\n",
-       "Ceftamin     y865\n",
-       "Infubinol    z581\n",
-       "Ketapril     y260\n",
-       "Naftisol     z969\n",
-       "Placebo      y478\n",
-       "Propriva     z435\n",
-       "Ramicane     z578\n",
-       "Stelasyn     z314\n",
-       "Zoniferol    x613\n",
-       "Name: Mouse ID, dtype: object"
+       "    Mouse ID  Timepoint  Tumor Volume (mm3)  Metastatic Sites Drug Regimen  \\\n",
+       "0       a203         45           67.973419                 2    Infubinol   \n",
+       "1       a251         45           65.525743                 1    Infubinol   \n",
+       "2       a262         45           70.717621                 4      Placebo   \n",
+       "3       a275         45           62.999356                 3     Ceftamin   \n",
+       "4       a366         30           63.440686                 1     Stelasyn   \n",
+       "..       ...        ...                 ...               ...          ...   \n",
+       "244     z435         10           48.710661                 0     Propriva   \n",
+       "245     z578         45           30.638696                 0     Ramicane   \n",
+       "246     z581         45           62.754451                 3    Infubinol   \n",
+       "247     z795         45           65.741070                 3     Naftisol   \n",
+       "248     z969         45           73.867845                 4     Naftisol   \n",
+       "\n",
+       "        Sex  Age_months  Weight (g)  \n",
+       "0    Female          20          23  \n",
+       "1    Female          21          25  \n",
+       "2    Female          17          29  \n",
+       "3    Female          20          28  \n",
+       "4    Female          16          29  \n",
+       "..      ...         ...         ...  \n",
+       "244  Female          12          26  \n",
+       "245    Male          11          16  \n",
+       "246  Female          24          25  \n",
+       "247  Female          13          29  \n",
+       "248    Male           9          30  \n",
+       "\n",
+       "[249 rows x 8 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mouse_study_data_df_copy_copy = mouse_study_data_df.groupby(\"Drug Regimen\")[\"Mouse ID\"].max()\n",
-    "mouse_study_data_df_copy_copy\n"
+    "# Used to check mouse data for individual mouse based on Mouse ID\n",
+    "mouse_study_data_df_copy_copy = mouse_study_data_df.copy()\n",
+    "mouse_check = mouse_study_data_df_copy_copy.loc[(mouse_study_data_df_copy_copy[\"Mouse ID\"] == \"a366\"), :]\n",
+    "mouse_check\n",
+    "\n",
+    "id_mouse_df = mouse_study_data_df_copy_copy.groupby(\"Mouse ID\")[\"Mouse ID\"].unique()\n",
+    "timepoint_mouse_df = mouse_study_data_df_copy_copy.groupby(\"Mouse ID\")[\"Timepoint\"].max()\n",
+    "\n",
+    "greatest_timepoint_mouse_df = pd.DataFrame({\"Timepoint\": timepoint_mouse_df})\n",
+    "greatest_timepoint_mouse_df.reset_index()\n",
+    "\n",
+    "merged_mouse_df = pd.merge(greatest_timepoint_mouse_df, mouse_study_data_df, how = \"left\", on = [\"Mouse ID\", \"Timepoint\"])\n",
+    "merged_mouse_df\n"
    ]
   },
   {
@@ -2162,7 +2344,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Put treatments into a list for for loop (and later for plot labels)\n",
+    "treatment_list = [\"Capomulin\", \"Ramicane\", \"Infubinol\", \"Ceftamin\"]\n",
+    "\n",
+    "# Create empty list to fill with tumor vol data (for plotting)\n",
+    "tumor_vol_list = []\n",
+    "\n",
+    "# Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
+    "for drug in treatment_list:\n",
+    "    \n",
+    "    # Locate the rows which contain mice on each drug and get the tumor volumes\n",
+    "    \n",
+    "    # add subset \n",
+    "    \n",
+    "    # Determine outliers using upper and lower bounds"
+   ]
   },
   {
    "cell_type": "code",
